add data access layer

--- a/MvcCombat/appsettings.json
+++ b/MvcCombat/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database = CombatDB;Trusted_Connection=True;"
+  },
+
   "AllowedHosts": "*"
 }
